--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- General -->
-    <string name="app_name">Whisper To Input</string>
+    <string name="app_name">Whisper++</string>
     <string name="enter_text">Enter Text</string>
-    <string name="whisper_to_input">Whisper To Input</string>
+    <string name="whisper_to_input">Whisper++</string>
     <string name="language_auto_label">Auto</string>
     <string name="empty_string" />
     <string name="loading">Loading…</string>
@@ -24,8 +24,8 @@
     <string name="start_speech_to_text">Start speech-to-text.</string>
     <string name="start_transcribing">Start transcribing.</string>
     <string name="grant_microphone_permission">Grant Microphone Permission</string>
-    <string name="mic_permission_required">Whisper to Input requires microphone permission to work.</string>
-    <string name="notification_permission_required">Whisper to Input requires notification permission to work.</string>
+    <string name="mic_permission_required">Whisper++ requires microphone permission to work.</string>
+    <string name="notification_permission_required">Whisper++ requires notification permission to work.</string>
     <string name="microphone">Microphone</string>
     <string name="successfully_set">Successfully set!</string>
     <string name="backspace_button_hint">Backspace Button</string>
@@ -41,7 +41,7 @@
     <string name="error_apikey_unset">Error: OpenAI API Key is not set in settings.</string>
 
     <!-- Settings -->
-    <string name="whisper_to_input_settings_title">Whisper To Input Settings</string>
+    <string name="whisper_to_input_settings_title">Whisper++ Settings</string>
     <string name="settings_btn_apply">Apply</string>
     <string name="menu_open_settings">Open Settings</string>
     <string name="menu_auto_recording_start">Auto Recording Start</string>
